--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -37,7 +37,7 @@
           </div>
 
           <div class="field mb-3">
-            <%= f.submit "変更する", class: "btn btn-dark btn-sm mt-4", style: "width: 42%;" %>
+            <%= f.submit "変更する", class: "btn btn-dark btn-sm mt-4" %>
           </div>
         <% end %>
       </div>
