--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
  /* swiper読み込み */
- @import 'swiper/swiper-bundle.min.css';
+@import 'swiper/swiper-bundle';
 
 /* 共通 */
 * {
@@ -27,6 +27,25 @@
 a:hover {
   color: #0056b3;
   text-decoration: none;
+}
+
+.footer-fixed {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+  background-color: #faf0e6;
+  color: #c0c0c0;
+  text-align: center;
+  width: 100%;
+  height: 100px
+}
+
+ul {
+  list-style: none;
 }
 
 /* Signup/in画面 */
@@ -57,9 +76,21 @@ a:hover {
 
 /* プロフィール画面 */
 .profile-wrap {
-  margin: 0 auto;
+  padding-top: 10px;
+  flex-grow: 1;
+  margin: 0 auto 30px;
+  max-width: 935px;
+  width: 100%;
+}
+
+.profile-top {
+  margin-bottom: 24px;
+  display: flex;
+}
+
+.profile-img {
+  margin-right: 28px;
   justify-content: center;
-  padding: 100px 300px;
 }
 
 .profile-icon {
@@ -68,33 +99,80 @@ a:hover {
   height: 120px;
 }
 
+.profile-name {
+  flex-shrink: 1;
+}
+
+.profile-status {
+  justify-content: space-around;
+  padding: 12px 0;
+  display: flex;
+}
+
+.profile-status-list {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 .follower-link, .follow-link, .favorite-link {
   color: #000;
   text-decoration: none;
 }
 
-.my-post {
-  padding: 30px 0;
-  border-top: 1px solid #ddd;
+.profile-post {
+  flex-direction: column;
+  padding-bottom: 50px;
+}
+
+.post-item-block {
+  flex-direction: row;
+  display: flex;
 }
 
 .post-item {
-  padding: 0 60px;
+  display: block;
+  position: relative;
+  width: 100%;
+  flex: 1 0 0%;
+  padding-bottom: 10px;
 }
 
-.post-item img {
-  width: 200px;
-  height: 200px;
+.post-item-img {
+  width: 100%;
+  height: 100%;
 }
 
-.post-wrap {
-  margin: 0 auto;
+.profile-post-none {
+  height: auto;
+  padding: 40px 0;
+}
+
+.post-none {
+  align-items: center;
   justify-content: center;
-  padding: 100px 200px;
+  padding: 0 20px;
+  text-align: center;
 }
 
-.card {
-  margin: 0 50px;
+.post-none-text {
+  font-size: 16px;
+}
+
+@media (max-width: 735px) {
+  .profile-top {
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 16px
+  }
+
+  .post-item {
+    margin-bottom: 3px;
+  }
+
+  .post-item-block {
+    margin-bottom: 3px;
+  }
 }
 
 /* 投稿詳細画面 */
@@ -106,4 +184,40 @@ a:hover {
 .comment-field {
   margin-left: 20px;
 }
+
+/* フォロワー一覧画面 */
+.followers-wrap {
+  margin: 0 auto;
+  max-width: 500px;
+  width: 100%;
+  padding-top: 10px;
+}
+
+.followers-title {
+  display: block;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.followers-content {
+  margin-top: 16px;
+  border: 1px solid #dbdbdb;
+}
+
+.followers-list {
+  padding: 8px 16px;
+  align-items: center;
+  display: flex;
+  width: 100%:
+}
+
+.followers-list-img {
+  margin-right: 12px;
+  justify-content: center;
+}
+
+.followers-list-name {
+}
+
 
