--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,4 @@
 <!-- フッター部分テンプレ -->
-<div class="container">
-  <div class="row no-gutters">
-    <div class="mx-auto">
-      <p>
-        <i class="fas fa-motorcycle"></i> © 2022 bikeen, Inc.
-      </p>
-    </div>
-  </div>
-</div>
+<p class="mt-4">
+  <i class="fas fa-motorcycle"></i> © 2022 bikeen, Inc.
+</p>
