--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -33,7 +33,7 @@
           </div>
 
           <div class="field mb-3">
-            <%= f.submit "投稿する", class: "btn btn-dark btn-sm mt-4", style: "width: 42%;" %>
+            <%= f.submit "投稿する", class: "btn btn-dark btn-sm mt-4" %>
           </div>
         <% end %>
       </div>
