--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -9,15 +9,16 @@
               <%= image_tag image, class: "card-img-left user-post-img" %>
             <% end %>
           <% else %>
-            <div class="swiper">
+            <div class="swiper-container">
               <div class="swiper-wrapper">
                 <% @post.images.each do |image| %>
                   <%= image_tag image, class: "card-img-left swiper-slide user-post-img" %>
                 <% end %>
               </div>
-              <div class="swiper-button-prev swiper-button-white"></div>
-              <div class="swiper-button-next swiper-button-white"></div>
               <div class="swiper-pagination"></div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-scrollbar"></div>
             </div>
           <% end %>
         <% end %>
@@ -36,16 +37,8 @@
         <p class="card-title ml-4"><%= render_with_hashtags(@post.hashbody) %></p>
         <p class="card-title ml-4"><%= @post.spot %></p>
         <span><i class="fas fa-calendar ml-4 mr-1"></i><%= l @post.created_at %>　|　</span>
-        <span>
-          <% if @post.favorited_by?(current_user) %>
-          <%= link_to post_favorites_path(@post), method: :delete, class: "favorite-link" do %>
-            <i class="fas fa-heart mr-1"></i><%= @post.favorites.count %>
-          <% end %>
-          <% else %>
-            <%= link_to post_favorites_path(@post), method: :post, class: "favorite-link" do %>
-              <i class="fas fa-heart mr-1"></i><%= @post.favorites.count %>
-            <% end %>
-          <% end %>
+        <span id="favorite_buttons_<%= @post.id %>">
+          <%= render 'user/favorites/favorite', post: @post %>
         </span>
         <span><i class="fas fa-comments mr-1"></i><%= @post.post_comments.count %>　|　</span>
         <span>
