--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -8,7 +8,7 @@
         <%= form_with model: @user, url: user_registration_path do |f| %>
         <%= render "user/shared/error_messages", resource: resource %>
           <div class="field mb-3">
-            <%= f.email_field :name, placeholder: " Name", autofocus: true, autocomplete: "name" %>
+            <%= f.text_field :name, placeholder: " Name", autofocus: true, autocomplete: "name" %>
           </div>
 
           <div class="field mb-3">
@@ -28,10 +28,10 @@
           </div>
 
           <div class="field mb-3">
-            <%= f.submit "Sign up", class: "btn btn-outline-danger btn-sm mt-4", style: "width: 42%;" %>
+            <%= f.submit "Sign up", class: "btn btn-outline-danger btn-sm mt-4" %>
           </div>
         <% end %>
-        
+
         <div class="signin-field">
           <p>──────────　Or　──────────</p>
           <p>
