--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,3 +1,13 @@
 <!-- topページ画面 -->
-<p>テスト</p>
+<div class="top-image">
+  <div class="top-image-content">
+    <div class="top-image-text">
+      <p>
+        Let's share it with everyone<br />
+        Have a good bike life!!!
+      </p>
+      <%= link_to "Start", new_post_path, class: "btn btn-outline-light font-weight-bold top-image-post" %>
+    </div>
+  </div>
+</div>
 
