--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -2,7 +2,7 @@
 <div class="conteiner p-3">
   <div class="row no-gutters">
     <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
-      <h3 class="py-5 mb-0">新規投稿</h3>
+      <h3 class="py-5 mb-0" style="font-family: fantasy;">New post</h3>
 
       <div class="field-body p-4">
         <%= form_with model: @post, url: posts_path do |f| %>
