--- a/app/views/user/favorites/create.js.erb
+++ b/app/views/user/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$('#favorite_buttons_<%= @post.id %>').html("<%= j(render "user/favorites/favorite", post: @post) %>");
+$('.favorites_buttons_<%= @post.id %>').html("<%= j(render "user/favorites/favorite", post: @post) %>");
