--- a/app/views/user/relationships/followings.html.erb
+++ b/app/views/user/relationships/followings.html.erb
@@ -1,34 +1,25 @@
 <!-- フォロー一覧画面 -->
-<div class="conteiner p-3">
-  <div class="row no-gutters">
-    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
-      <h3 class="py-5 mb-0">フォロー一覧</h3>
-
-      <div class="following-list p-4">
-        <div class="row">
-          <% if @users.exists? %>
-            <% @users.each do |user| %>
-              <%= link_to user_path(user.id) do %>
-                <div class="col-6 ml-5">
-                  <%= image_tag user.get_profile_image(50, 50), class: "rounded-circle mr-3" %>
-                </div>
-                <div class="col-6">
-                  <strong class="text-dark"><%= user.name %></strong>
-                  <% if current_user.following?(user) %>
-                    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class: "btn btn-primary btn-sm ml-3" %>
-                  <% else %>
-                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-outline-primary btn-sm ml-3" %>
-                  <% end %><br />
-                  <%= user.introduction %>
-                </div>
-              <% end %>
+<div class="follow-wrap">
+  <h4 class="follow-title">フォロー一覧</h4>
+  <% if @users.exists? %>
+    <% @users.each do |user| %>
+      <div class="follow-content">
+        <div class="follow-list">
+          <div class="follow-list-img">
+            <%= link_to user_path(user.id) do %>
+              <%= image_tag user.get_profile_image(50, 50), class: "rounded-circle" %>
             <% end %>
-            <hr>
-          <% else %>
-            <p>ユーザーはいません</p>
-          <% end %>
+          </div>
+          <div class="follow-list-name">
+            <strong class="text-dark"><%= user.name %></strong><br />
+            <%= user.introduction %>
+          </div>
         </div>
       </div>
+    <% end %>
+  <% else %>
+    <div class="follow-none">
+      <h4 class="follow-none-text font-weight-bold">ユーザーはいません</h4>
     </div>
-  </div>
+  <% end %>
 </div>
