[Update]機能・画面テスト確認

--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -59,7 +59,7 @@
                   <div class="post-item-img">
                     <div class="images-box">
                       <%= image_tag post.images[0], size: '100*100' %>
-                      <div class="images">
+                      <div class="user-images">
                         <i class="fas fa-images text-secondary images-icon"></i>
                       </div>
                     </div>
@@ -74,7 +74,7 @@
     <% else %>
       <div class="profile-post-none">
         <div class="post-none">
-          <h2 class="post-none-text font-weight-bold">画像や動画を投稿してみんなと共有しましょう！</h2>
+          <h2 class="post-none-text font-weight-bold">画像を投稿してみんなと共有しましょう！</h2>
         </div>
       </div>
     <% end %>
