--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,6 +80,14 @@ ul {
   position: relative;
 }
 
+@media (max-width: 735px) {
+  .top-image {
+    background-image: url("free-bike.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+}
+
 .top-image-content {
   position: absolute;
   top: 0;
@@ -131,7 +139,7 @@ ul {
 
 /* プロフィール画面 */
 .profile-wrap {
-  padding-top: 10px;
+  padding-top: 50px;
   flex-grow: 1;
   margin: 0 auto 30px;
   max-width: 935px;
@@ -188,6 +196,13 @@ ul {
   margin: 5px;
 }
 
+@media (max-width: 735px) {
+  .post-item-block {
+    margin: 0 auto;
+    justify-content: center;
+  }
+}
+
 .post-item {
   display: block;
   position: relative;
@@ -204,11 +219,12 @@ ul {
 .profile-post-none {
   height: auto;
   padding: 40px 0;
+  margin: 0 auto;
+  justify-content: center;
 }
 
 .post-none {
   align-items: center;
-  justify-content: center;
   padding: 0 20px;
   text-align: center;
 }
@@ -216,6 +232,12 @@ ul {
 .post-none-text {
   font-size: 16px;
 }
+
+.user-images {
+    position: absolute;
+    top: 3%;
+    right: 3%;
+  }
 
 @media (max-width: 735px) {
   .profile-top {
@@ -226,6 +248,7 @@ ul {
 
   .post-item {
     margin-bottom: 3px;
+    position: relative;
   }
 
   .post-item-block {
@@ -263,13 +286,27 @@ ul {
 
 /* 投稿一覧画面 */
 .post-wrap {
-  margin: 50px 150px;
+  margin: 50px 250px;
 }
 
 .post-content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+.post-content:after {
+  display: block;
+  content:"";
+  width: 300px;
+  height: 300px;
+  margin: 15px;
+}
+
+@media (max-width: 735px) {
+  .post-content {
+    justify-content: center;
+  }
 }
 
 .post-content img {
