[Update]データ移行用

--- a/app/views/user/favorites/create.js.erb
+++ b/app/views/user/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$('#favorites_buttons_<%= @post.id %>').html("<%= j(render "user/favorites/favorite", post: @post) %>");
+$('#favorite_buttons_<%= @post.id %>').html("<%= j(render "user/favorites/favorite", post: @post) %>");
